--- a/src/historia-data/pyproject.toml
+++ b/src/historia-data/pyproject.toml
@@ -14,6 +14,7 @@ python = "^3.11"
 historia-ml = { path = "../historia-ml" }
 historia-django-utils = { path = "../historia-django-utils" }
 django = "^5.1.3"
+pyyaml = "^6.0.2"
 
 
 [build-system]
