--- a/src/historia-data/pyproject.toml
+++ b/src/historia-data/pyproject.toml
@@ -15,6 +15,7 @@ historia-ml = { path = "../historia-ml" }
 historia-django-utils = { path = "../historia-django-utils" }
 django = "^5.1.3"
 pyyaml = "^6.0.2"
+wikipedia-api = "^0.7.1"
 
 
 [build-system]
