--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ historia-django-utils = { path = "src/historia-django-utils", develop = true }
 historia-ml = { path = "src/historia-ml", develop = true }
 
 djangorestframework = "^3.15.2"
+django-extensions = "^3.2.3"
 
 [tool.poetry.group.data.dependencies]
 historia-data = { path = "src/historia-data", develop = true }
