--- a/src/historia-data/pyproject.toml
+++ b/src/historia-data/pyproject.toml
@@ -11,8 +11,11 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.11"
 
+historia-indexing = { path = "../../apps/historia_indexing" }
+
 historia-ml = { path = "../historia-ml" }
 historia-django-utils = { path = "../historia-django-utils" }
+
 django = "^5.1.3"
 pyyaml = "^6.0.2"
 wikipedia-api = "^0.7.1"
