--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,3 +33,6 @@ ruff = "*"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+lint.ignore = ["E402"]
